# Senister

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CODING_STYLE.md  README.md  \  build.ninja  cmake_install.cmake  dasd  license
.github/workflows/: build.yml  waka.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.zed/: debug.json
app/: App.cpp  App.h  main.cpp
app/HELPER/: CONSTANTS.h
app/core/: CMakeLists.txt
app/core/files/: File.cpp  File.h  FileManager.cpp  FileManager.h
app/core/profile/: ProfileEngine.cpp  ProfileEngine.h
app/core/text/: Piece.cpp  Piece.h  PieceOfTable.cpp  PieceOfTable.h  TextEngine.cpp  TextEngine.h
app/ui/: CMakeLists.txt
app/ui/input/: Cursor.cpp  Cursor.h  InputEngine.cpp  InputEngine.h  InputStrategy.h  InsertMode.cpp  InsertMode.h  NormalMode.cpp  NormalMode.h  Shortcut.cpp  Shortcut.h  SoundEngine.cpp  SoundEngine.h
app/ui/widgets/: CodeUI.cpp  CodeUI.h  FileBar.cpp  FileBar.h  LineNumerator.cpp  LineNumerator.h
core/: App.cpp  App.h  CodeEditor.cpp  CodeEditor.h  Editor.cpp  Editor.h  LineNumerator.cpp  LineNumerator.h  MainWindow.cpp  MainWindow.h  Piece.cpp  Piece.h  PieceOfTable.cpp  PieceOfTable.h  ScrollBar.cpp  ScrollBar.h  main.cpp
core/Files/: File.cpp  File.h  FileManager.cpp  FileManager.h
core/HELPER/: CONSTANTS.h
core/Input/: InputEngine.cpp  InputEngine.h  InputStrategy.h  NormalMode.cpp  NormalMode.h  Shortcut.cpp  Shortcut.h  VimStrategy.cpp  VimStrategy.h
core/Text/: PieceOfTable.cpp  PieceOfTable.h  TextEngine.cpp  TextEngine.h
core/UI/: CodeUI.cpp  CodeUI.h  Cursor.cpp  Cursor.h  FileBar.cpp  FileBar.h  LineNumerator.cpp  LineNumerator.h
profiles/default/: config.json  default.json
profiles/default/sounds/: insert.wav.bak  normal.wav.bak
resources/: resources.qrc
test/: PieceTableTest.cc  TextEngineTest.cc  test.cpp  test2.cpp  testcopy.cpp
